<resources>
  <string name="app_name">FizzBuzz</string>

  <string name="mockup_value">##</string>

  <string name="play">Play</string>
  <string name="pause">Pause</string>
  <string name="settings">Settings</string>

  <string name="difficulty_title">Difficulty</string>

  <string name="time_limit_key">time_limit</string>
  <string name="time_limit_title">Time limit</string>
  <string name="time_limit_summary">Seconds each value is displayed (0 = no limit)</string>

  <string name="num_digits_key">num_digits</string>
  <string name="num_digits_title">Maximum digits</string>
  <string name="num_digits_summary">Maximum digits in value displayed</string>

  <string name="general_title">General</string>

  <string name="game_time_key">game_time</string>
  <string name="game_time_title">Game duration</string>
  <string name="game_time_summary">Duration of game in seconds</string>
  <string name="status">Current game status</string>

  <string name="game_data_key">game_data</string>
  <string name="game_time_elapsed_key">game_time_elapsed</string>


  <string name="fizz">Fizz</string>
  <string name="buzz">Buzz</string>
  <string name="fizz_buzz">FizzBuzz</string>
  <string name="neither"> </string>

  <string name="value_header">Value</string>
  <string name="category_header">Category</string>
  <string name="correct_header">Correct?</string>

  <string name="correct_description"> Correct!</string>

  <string name="incorrect_description">Incorrect!</string>
  <string name="reset_message">Game Reset!</string>
  <string name="fizzbuzz_marker"><![CDATA[3&5]]></string>
  <string name="fizz_marker">3</string>
  <string name="buzz_marker">5</string>
  <string name="neither_marker">—</string>
  <string name="time_expired_message">Time\'s up!</string>

  <string name="clock_format">%1$d:%2$04.1f</string>
</resources>
