<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/roll_item_padding"
  android:theme="@style/RoundHeader">

<TextView
  android:layout_width="0dp"
  android:layout_height="wrap_content"
  android:layout_weight="1"
  android:layout_gravity="center"
  android:text="@string/value_header"/>

<TextView
  android:layout_width="0dp"
  android:layout_height="wrap_content"
  android:layout_weight="2"
  android:layout_gravity="center"
  android:text="@string/category_header"/>

  <TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/correct_header"/>

</LinearLayout>